# sara

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  wynik_testow.txt
.github/workflows/: windows-build.yml
config/: settings.example.yaml
docs/: accessibility.md  requirements.md
docs/design/: refactoring_plan.md  single_device_mixer.md
docs/development/: mix_executor.md  (+4 more)
scripts/: auto_download.sh  download_latest_artifact.sh  embed_bs1770gain.py  install_hooks.sh
tests/: test_alert_resources.py  test_announcement_service.py  test_audio_engine.py  test_audio_preloading.py  test_bass_device_name_decoding.py  test_bass_player.py  test_bass_volume.py  test_config_announcements.py  test_device_mixer.py  test_file_browser.py  test_file_selection_dialog.py  test_file_selection_helpers.py  test_gui_scenarios.py  test_import_compatibility.py  test_jingle_controller.py  test_jingles.py  test_loudness.py  test_m3u.py  test_media_metadata.py  test_mix_executor_thread.py  test_mix_point_loudness.py  test_mix_points.py  test_mix_triggers.py  test_mix_triggers_ui.py  test_mock_player.py  test_news_clipboard.py  test_news_markdown.py  test_news_mode_controller.py  test_news_playlist_panel.py  test_news_read_view.py  test_news_service.py  test_news_service_manager.py  test_nvda_addon.py  test_nvda_sleep_mode.py  test_pfl_mix_preview_preloading.py  test_playback_alerts_preview_context.py  test_playback_controller.py  test_playback_logging_and_nowplaying.py  test_playback_next_item.py  test_playback_panel_refresh_optimization.py  (+17 more)
(+340 files in other folders)
