[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sara"
version = "0.0.9"
description = "Simple Accessible Radio Automation for radio stations"
readme = "README.md"
authors = [{name = "SARA Team"}]
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "wxPython>=4.2.1",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pyyaml>=6.0.1",
    "mutagen>=1.47.0",
    "numpy>=1.23.0"
]

[project.optional-dependencies]
asio = ["pythonnet>=3.0.3"]
wasapi = ["pycaw>=20181226", "comtypes>=1.2.0"]
qt = ["PySide6>=6.7.0"]
dev = ["black>=24.3.0", "ruff>=0.3.5", "pytest>=8.1.1"]

[project.scripts]
sara = "sara.app:run"
sara-news-editor = "sara.news_editor_app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sara" = [
  "locale/**/sara.mo",
  "locale/**/sara.po",
  "audio/vendor/**/*.dll",
  "audio/vendor/**/*.so",
  "audio/vendor/**/*.txt",
  "audio/media/**/*.wav",
]
